My personal website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,141 @@
-Hello World
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Marek Zofota - webdeveloper</title>
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
+	<div class="container">
+
+		<header class="hero">
+			<img src="foto.jpg" alt="Marek Zofota" class="hero-photo">
+			<div class="hero-body">
+				<p>Hello, I'm</p>
+				<h1 class="hero-title">Marek Zofota</h1>
+				<p>webdeveloper</p>
+			</div>
+			<ul class="hero-links">
+				<li>
+					<a href="tel:00421950400468">
+						<img src="phone.svg" alt="phone">
+						<span class="sr-only">phone 00421 950 400 468</span>
+					</a>
+				</li>
+				<li>
+					<a href="mailto:marek.zofota@gmail.com">
+						<img src="mail.svg" alt="email">
+						<span class="sr-only">email marek.zofota@gmail.com</span>
+					</a>
+				</li>
+				<li>
+					<a href="https://www.webstore.sk" target="_blank">
+						<img src="web-blue.svg" alt="web">
+						<span class="sr-only">web www.webstore.sk</span>
+					</a>
+				</li>
+			</ul>
+		</header>
+
+		<main>
+			<section class="section profile">
+				<h2 class="section-title">Profile</h2>
+
+				<div class="section-body">
+					<p>I’m a UX/UI designer and fullstack webdeveloper with +8 years of experiences. My interests range from web development to technology. My hobbies are my daughter, dog and my work. I’m also interested in outdoors, photography and snowboarding.</p>
+				</div>
+			</section>
+
+			<section class="section skills">
+				<h2 class="section-title">Skills</h2>
+
+				<div class="section-body">
+					<h3>Codeing technologies</h3>
+					<p>HTML, CSS (SCSS), PHP</p>
+
+					<h3>Framework</h3>
+					<p>Bootsrap, Laravel, Wordpress, ExpressionEngine, OpenCart</p>
+
+					<h3>Dev</h3>
+					<p>Hosting, Docker, Vagrant, Linux, Apache, MySQL, Git</p>
+
+					<h3>Online marketing</h3>
+					<p>SEO, PageSpeed Insights, Google Analytics, Google Optimizem, Facebook Business, Copywriting</p>
+
+					<h3>Tools</h3>
+					<p>Mac OS, Affinity Designer, Adobe XD, PHP Storm, SublimeText, Google Lighthouse</p>
+				</div>
+			</section>
+
+			<section class="section projects">
+				<h2 class="section-title">Projects</h2>
+
+				<div class="section-body">
+					<h3>Webdesign, UX/UI, coding</h3>
+					<p>
+						<a href="https://www.4ka.sk" target="_blank">4ka.sk</a>,
+						<a href="https://www.swan.sk" target="_blank">swan.sk</a>,
+						<a href="https://www.swango.sk" target="_blank">swango.sk</a>,
+						<a href="https://www.globaltel.sk" target="_blank">globaltel.sk</a>,
+						<a href="https://www.cnc.sk" target="_blank">cnc.sk</a>,
+						<a href="https://www.perpetuus.sk" target="_blank">perpetuus.sk</a>,
+						<a href="https://www.fony.sk" target="_blank">fony.sk</a>,
+						<a href="https://www.psca.sk" target="_blank">psca.sk</a>,
+						<a href="https://www.internet.sk" target="_blank">internet.sk</a>,
+					</p>
+
+					<p>
+						<a href="https://www.webstore.sk" target="_blank">webstore.sk</a>,
+						<a href="https://www.apartmanynevadza.sk" target="_blank">apartmanynevadza.sk</a>,
+						<a href="https://www.mobilroka.sk" target="_blank">mobilroka.sk</a>,
+						<a href="https://www.inteligentneriesenia.sk" target="_blank">inteligentneriesenia.sk</a>,
+						<a href="https://www.detska.sk" target="_blank">detska.sk</a>,
+						<a href="https://www.siarik-trans.sk" target="_blank">siarik-trans.sk</a>
+					</p>
+
+					<p class="not-finished">onlineinvoices.eu, urobim.sk, bytovyspravca.sk, farmicky.sk</p>
+
+					<h3>App design, UX/UI</h3>
+					<p>
+						<a href="https://www.4ka.sk/moja-4ka" target="_blank">Moja 4ka</a>,
+						<span class="not-finished">Susedská knižnica</span>
+					</p>
+				</div>
+			</section>
+
+			<section class="section socials">
+				<h2 class="section-title">Socials</h2>
+
+				<div class="section-body">
+					<a href="https://www.linkedin.com/in/marek-zofota-33903567/" target="_blank">
+						<span class="sr-only">LinkedIn</span>
+						<img src="linkedin.svg" alt="LinkedIn">
+					</a>
+
+					<a href="https://github.com/himak" target="_blank">
+						<span class="sr-only">Github</span>
+						<img src="github.svg" alt="Github">
+					</a>
+
+					<a href="https://www.webstore.sk" target="_blank">
+						<span class="sr-only">My Business Sites</span>
+						<img src="web.svg" alt="webstore.sk">
+					</a>
+
+					<a href="https://www.facebook.com/marekzofota" target="_blank">
+						<span class="sr-only">Facebook</span>
+						<img src="facebook.svg" alt="Facebook">
+					</a>
+				</div>
+			</section>
+
+		</main>
+
+		<footer>
+			<p class="sr-only">&copy 2020</p>
+		</footer>
+
+	</div>
+
+</body>
+</html>
