--- a/index.html
+++ b/index.html
@@ -3,6 +3,23 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Marek Zofota - webdeveloper</title>
+	<meta name="description" content="Marek Zofota">
+	<meta name="keywords" content="webdeveloper php laravel">
+	<meta name="robots" content="index,follow,archive">
+	<meta name="application-name" content="Marek Zofota">
+	<link rel="canonical" href="https://himak.github.io">
+    <meta property="og:title" content="Marek Zofota">
+	<meta property="og:description" content="webdeveloper">
+	<meta property="og:locale" content="sk_SK">
+	<meta property="og:image" content="https://himak.github.io/facebook.jpg">
+	<meta property="og:image:secure_url" content="https://himak.github.io/facebook.jpg">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://himak.github.io">
+    <link rel="icon" href="favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
