Add socials Dribble

--- a/index.html
+++ b/index.html
@@ -32,26 +32,28 @@
 				<h1 class="hero-title">Marek Zofota</h1>
 				<p>webdeveloper</p>
 			</div>
-			<ul class="hero-links">
-				<li>
-					<a href="tel:00421950400468">
-						<img src="phone.svg" alt="phone">
-						<span class="sr-only">phone 00421 950 400 468</span>
-					</a>
-				</li>
-				<li>
-					<a href="mailto:marek.zofota@gmail.com">
-						<img src="mail.svg" alt="email">
-						<span class="sr-only">email marek.zofota@gmail.com</span>
-					</a>
-				</li>
-				<li>
-					<a href="https://www.webstore.sk" target="_blank">
-						<img src="web-blue.svg" alt="web">
-						<span class="sr-only">web www.webstore.sk</span>
-					</a>
-				</li>
-			</ul>
+			<div class="hero-contacts">
+				<ul class="hero-links">
+					<li>
+						<a href="tel:00421950400468">
+							<img src="phone.svg" alt="phone">
+							<span class="sr-only">phone 00421 950 400 468</span>
+						</a>
+					</li>
+					<li>
+						<a href="mailto:marek.zofota@gmail.com">
+							<img src="mail.svg" alt="email">
+							<span class="sr-only">email marek.zofota@gmail.com</span>
+						</a>
+					</li>
+					<li>
+						<a href="https://www.webstore.sk" target="_blank">
+							<img src="web-blue.svg" alt="web">
+							<span class="sr-only">web www.webstore.sk</span>
+						</a>
+					</li>
+				</ul>
+			</div>
 		</header>
 
 		<main>
@@ -124,22 +126,27 @@
 				<h2 class="section-title">Socials</h2>
 
 				<div class="section-body">
-					<a href="https://www.linkedin.com/in/marek-zofota-33903567/" target="_blank">
+					<a href="https://www.linkedin.com/in/marek-zofota-33903567/" target="_blank" title="LinkedIn">
 						<span class="sr-only">LinkedIn</span>
 						<img src="linkedin.svg" alt="LinkedIn">
 					</a>
 
-					<a href="https://github.com/himak" target="_blank">
+					<a href="https://github.com/himak" target="_blank" title="Github">
 						<span class="sr-only">Github</span>
 						<img src="github.svg" alt="Github">
 					</a>
 
-					<a href="https://www.webstore.sk" target="_blank">
+					<a href="https://dribbble.com/MarekZofota" target="_blank" title="Dribble">
+						<span class="sr-only">Dribbble</span>
+						<img src="dribbble.svg" alt="Dribbble">
+					</a>
+
+					<a href="https://www.webstore.sk" target="_blank" title="My company website">
 						<span class="sr-only">My Business Sites</span>
 						<img src="web.svg" alt="webstore.sk">
 					</a>
 
-					<a href="https://www.facebook.com/marekzofota" target="_blank">
+					<a href="https://www.facebook.com/marekzofota" target="_blank" title="Facebook">
 						<span class="sr-only">Facebook</span>
 						<img src="facebook.svg" alt="Facebook">
 					</a>
