--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
 					<h3>Codeing technologies</h3>
 					<p>HTML, CSS (SCSS), PHP</p>
 
-					<h3>Framework</h3>
+					<h3>Frameworks</h3>
 					<p>Bootsrap, Laravel, Wordpress, ExpressionEngine, OpenCart</p>
 
 					<h3>Dev</h3>
 					<p>Hosting, Docker, Vagrant, Linux, Apache, MySQL, Git</p>
 
 					<h3>Online marketing</h3>
-					<p>SEO, PageSpeed Insights, Google Analytics, Google Optimizem, Facebook Business, Copywriting</p>
+					<p>SEO, PageSpeed Insights, Google Analytics, Google Optimize, Facebook Business, Copywriting</p>
 
 					<h3>Tools</h3>
 					<p>Mac OS, Affinity Designer, Adobe XD, PHP Storm, SublimeText, Google Lighthouse</p>
