Added a new projecets: dedoles, onlinefaktury

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 				<div class="section-body">
 					<h3>Webdesign, UX/UI, coding</h3>
 					<p>
+						<a href="https://www.dedoles.sk" target="_blank">dedoles.sk</a>,
 						<a href="https://www.4ka.sk" target="_blank">4ka.sk</a>,
 						<a href="https://www.swan.sk" target="_blank">swan.sk</a>,
 						<a href="https://www.swango.sk" target="_blank">swango.sk</a>,
@@ -104,6 +105,7 @@
 					</p>
 
 					<p>
+						<a href="https://www.onlinefaktury.sk" target="_blank">onlinefaktury.sk</a>,
 						<a href="https://www.webstore.sk" target="_blank">webstore.sk</a>,
 						<a href="https://www.apartmanynevadza.sk" target="_blank">apartmanynevadza.sk</a>,
 						<a href="https://www.mobilroka.sk" target="_blank">mobilroka.sk</a>,
