Update index.html, change company URL from Webstore to Kafex

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 						</a>
 					</li>
 					<li>
-						<a href="https://www.webstore.sk" target="_blank">
+						<a href="https://www.kafex.sk" target="_blank">
 							<img src="web-blue.svg" alt="web">
-							<span class="sr-only">web www.webstore.sk</span>
+							<span class="sr-only">web www.kafex.sk</span>
 						</a>
 					</li>
 				</ul>
