--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
 						<img src="dribbble.svg" alt="Dribbble">
 					</a>
 
-					<a href="https://www.webstore.sk" target="_blank" title="My company website">
+					<a href="https://www.kafex.sk" target="_blank" title="My company website">
 						<span class="sr-only">My Business Sites</span>
-						<img src="web.svg" alt="webstore.sk">
+						<img src="web.svg" alt="kafex.sk">
 					</a>
 
 					<a href="https://www.facebook.com/marekzofota" target="_blank" title="Facebook">
