Update index.html about me.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				<h2 class="section-title">Profile</h2>
 
 				<div class="section-body">
-					<p>I’m a UX/UI designer and fullstack webdeveloper with +8 years of experiences. My interests range from web development to technology. My hobbies are my daughter, dog and my work. I’m also interested in outdoors, photography and snowboarding.</p>
+					<p>I’m a UX/UI designer and fullstack webdeveloper with +8 years of experiences. My interests range from web development to technology. I'm coffee lover and bike raider.</p>
 				</div>
 			</section>
 
